--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,29 +38,62 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+    const fifteen = inventors.filter(inventor=> inventor.year >= 1500 && inventor.year <= 1599);
+    console.table(fifteen);
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
-
+    const fullName = inventors.map(inventor => inventor.first + ' ' + inventor.last);
+    console.table(fullName);
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-
+    const sortBirth = inventors.sort(function (firstPerson, secondPerson){
+      if (firstPerson.year > secondPerson.year) {
+        return 1;        
+      }else {
+        return -1;
+      }
+    });
+    console.table(sortBirth);
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const totalYear = inventors.reduce((total, inventor) =>{
+      return total + (inventor.passed - inventor.year);
+    },0);
 
+    console.log(totalYear);
     // 5. Sort the inventors by years lived
-
+    const oldest = inventors.sort(function(firstPerson, secondPerson){
+      if((firstPerson.passed - firstPerson.year) > (secondPerson.passed - secondPerson.year)){
+        return -1;
+      }else{
+        return 1;
+      }
+    });
+    console.table(oldest);
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const sortPeople = people.sort(function (firstPerson, secondPerson){
+      const [first, last] = firstPerson.split(', ');
+      const [aFirst, aLast] = secondPerson.split(', ');
+      return last > aLast ? 1 : -1;
+    });
+    console.table(sortPeople)
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
-
+    const transportation = data.reduce(function(obj, item){
+      if(!obj[item]){
+        obj[item] = 0;
+      }
+      obj[item]++;
+      return obj;
+    },{});
+    console.log(transportation);
   </script>
 </body>
 </html>
